<resources>
    <string name="app_name">Secure Home Automation</string>
    <string name="leavingMsg">Are you sure you want to exit the app</string>
    <string name="leavingTitle">Leaving?</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="settings">Settings</string>
    <string name="door">Door</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="here_we_will_add_temperature_method">Here we will add Temperature method</string>
    <string name="here_we_will_implement_lights_method">Here we will implement lights method</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="en_code" translatable="false">en</string>
    <string name="fr_code" translatable="false">fr</string>
    <string name="recreated" translatable="false">recreated</string>
    <string name="temperature">Temperature</string>
    <string name="lights">Lights</string>
    <string name="doorinfo">DoorInfo</string>
    <string name="tempinfo">TempInfo</string>
    <string name="lightinfo">LightInfo</string>
    <string name="sensorsim">SensorSim</string>
    <string name="bottomnav">BottomNav</string>
    <string name="tempbtn">TempBtn</string>
    <string name="lockbtn">Lockbtn</string>
    <string name="lightbtn">LightBtn</string>
    <string name="homeBackGround" translatable="false">TODO</string>
    <string name="mainHomeIcon" translatable="false">TODO</string>
    <string name="name_of_user">Hello, Name Of User!</string>
    <string name="greetingMorning">Good Morning</string>
    <string name="greetingAfternoon">Good Afternoon</string>
    <string name="greetingEvening">Good Evening</string>
    <string name="greetingNight">Good Night</string>
    <string name="done">Done</string>
    <string name="confirm_your_password">Confirm password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_email_address">Enter your Email address</string>
    <string name="full_name">Full name</string>
    <string name="registration">Registration</string>
    <string name="welcome_to_our_app">Home Automation</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="login">Welcome Back</string>
    <string name="login_btn">Login</string>
    <string name="forgot_password">forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register Here</string>
    <string name="sign_out">Sign out</string>
    <string name="settings_title">Settings</string>
    <string name="login_success">login successful</string>
    <string name="email_valid">Enter Valid Email!</string>
    <string name="enterpassword">Please enter password</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_something">Please enter something!</string>
    <string name="email_check">Please check your email…</string>
    <string name="password_no_match">Password does not match!</string>
    <string name="enter_valid_email">Enter valid Email Address</string>
    <string name="minimum_eight_character">Must have minimum 8 character</string>
    <string name="password_enter">Enter a password</string>
    <string name="email_address_enter">Enter your Email address</string>
    <string name="enter_name">Enter your name</string>
    <string name="closedDoor">Closed Door</string>
    <string name="openDoor">Door Open</string>
    <string name="login_in_to_continue">Login in to continue</string>
    <string name="accelerometer_settings">Accelerometer Settings</string>
    <string name="temperature_settings">Temperature Settings</string>
    <string name="lights_settings">Lights Settings</string>
    <string name="door_settings">Door Settings</string>
    <string name="accelerometer_btn">Accelerometer</string>
    <string name="temperature_btn">Temperature</string>
    <string name="lights_btn">Lights</string>
    <string name="door_btn">Door</string>
    <string name="refresh">Refresh</string>
    <string name="windows">Windows</string>
    <string name="emailverify">Please verify your email address</string>
    <string name="_forgot">Enter your email address</string>
    <string name="enter_your_email_address_forgot">Enter your email address</string>
    <string name="send_me_email">Send me email</string>
    <string name="account">Account</string>
    <string name="app_colour">App Colour</string>
    <string name="Bold_text">Bold Text</string>
    <string name="quick_access">Quick Access</string>
    <string name="waiting_for_the_device_to_connect">Waiting for the device to connect…</string>
    <string name="use_fingerprint_to_sign_in">Use Fingerprint to Sign in</string>
    <string name="dark_app_theme">Dark app Theme</string>
    <string name="_settings">Use fingerprint to sign in</string>
    <string name="save">Save</string>
    <string name="off_on">off/on</string>
    <string name="app_color">App color</string>
    <string name="enable_fingerprint_login">Enable fingerprint login</string>
    <string name="g_door_info">green door info</string>
    <string name="g_temp_info">green temp info</string>
    <string name="r_door_info">red door info</string>
    <string name="r_light_info">red light info</string>
    <string name="r_temp_info">red temp info</string>
    <string name="g_light_info">green light info</string>
    <string name="g_window_info">green window info</string>
    <string name="r_window_info">red window info</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="lock_portrait_mode">Lock portrait mode</string>
    <string name="add_device">Add Device</string>
    <string name="timer">Timer</string>
    <string name="scheduler">Scheduler</string>
    <string name="light_icon">light_icon</string>
    <string name="window_icon">window_icon</string>
    <string name="set_max_temperature">Set max temperature:</string>
    <string name="set_minimum_temperature">Set minimum temperature:</string>
    <string name="add_new_key_card">Add new key card:</string>
    <string name="lock_configuration">Lock Configuration</string>
    <string name="door_status">Door status:</string>
    <string name="lock_unlock_door">Status</string>
    <string name="light_configuration">Light</string>
    <string name="temp_configuration">Temp</string>
    <string name="window_configuration">Window</string>
    <string name="currenttemp">Current Temperature:</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="unlock">Unlocked</string>
    <string name="lock">Locked</string>
    <string name="check_status">Check Status</string>
    <string name="space" translatable="false"> </string>
    <string name="google_signin_error">Something went wrong!</string>
    <string name="work_under_construction">Work under construction</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="morningUsr">"Good Morning, "</string>
    <string name="noonUsr">"Good Afternoon, "</string>
    <string name="eveningUsr">"Good Evening, "</string>
    <string name="nightUsr">"Good Night, "</string>
    <string name="noVal">Not found</string>
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="ultrasonicSensor">Ultrasonic Sensor Distance:</string>
    <string name="minutes">minutes</string>
    <string name="lightOff">Lights OFF</string>
    <string name="lightOn">Lights ON</string>
    <string name="timeSet">Time you set in\n</string>
    <string name="data_in">Data to Database</string>
    <string name="lightpressed">LightPressed</string>
    <string name="windowspressed">WindowsPressed</string>
    <string name="lockpress">LockPress</string>
    <string name="temppress">TempPress</string>
    <string name="homeicon">HomeIcon</string>
    <string name="history">History:</string>
    <string name="manage_keys">Manage Keys:</string>
    <string name="setup">Setup</string>
    <string name="vacation_mode">Vacation Mode:</string>
    <string name="door_configuration">Door</string>
    <string name="add_key">Add Key</string>
    <string name="remove_key">Remove Key</string>
    <string name="sample_1">SAMPLE - Unauthorized Key Attempt</string>
    <string name="sample_2">SAMPLE - Door Locked 8:22AM</string>
    <string name="sample_3">SAMPLE - Door Unlocked 4:58PM</string>
    <string name="startTimeSelect">Select Start time</string>
    <string name="endTimeSelect">Select the end time</string>
    <string name="saved">Saved!</string>
    <string name="endSmall">Please make sure that the Start time must be smaller than end time</string>
    <string name="logDataSaved">end is more than start, Saved</string>
    <string name="logDataEndSmall">end is equal than start, or end is less than start, bad</string>
    <string name="startTimemsg">\"Start time saved: \"</string>
    <string name="endTimemsg">\" End time saved :\"</string>
    <string name="startorendnull">Null Values in Start time or End Time</string>
    <string name="timeFormat">%02d:%02d</string>
    <string name="DatabaseStr">\"Database: \"</string>
    <string name="sensorKey" translatable="false">/Light Status</string>
    <string name="statusKey" translatable="false">/Light Status</string>
    <string name="Timer">Timer</string>
    <string name="hourmin" translatable="false">HH:mm</string>
    <string name="sample_4">SAMPLE - Door Unlocked 6:48PM</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="thursday">Thursday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="save_days">Save Days</string>
    <string name="select_start_and_end_time">Select start and end time:</string>
    <string name="select_the_day_of_week">Select the day of week</string>
    <string name="checkboxNum">number of checking</string>
    <string name="pickedDays">Days user picked are:</string>
    <string name="mustpickday">Need to pick at least 1 day</string>
    <string name="dayspickedMsg">\"Day picked: \"</string>
    <string name="timeSelectedmsg">\nTime selected :</string>
    <string name="to"> to </string>
    <string name="place_key">Place key card you wish to add on the RIFD reader…</string>
    <string name="cancel">Cancel</string>
    <string name="place_key_remove">Place the key you wish to remove on the RFID reader…</string>
    <string name="success">Success!</string>
    <string name="close">Close!</string>
    <string name="timeKey" translatable="false">/Schedule/Time</string>
    <string name="empty" translatable="false" />
    <string name="FirstCheck">First Check</string>
    <string name="Check">\"Check: \"</string>
    <string name="dayKey" translatable="false">/Schedule/Day</string>
    <string name="enter_your_phone_number">Enter your Phone number</string>
    <string name="phone_number_error_message">Must be at least 10 numbers</string>
    <string name="phone">Phone Number:</string>
    <string name="noInfo">No Info</string>
    <string name="status">\"Status: \"</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="change_password">Change Password</string>
    <string name="save_changes">Save Changes</string>
</resources>