<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:id="@+id/Homefrag">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".HomeFragment">

        <ImageView
            android:id="@+id/greenDoor"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="164dp"
            android:contentDescription="@string/doorinfo"
            android:src="@drawable/green_gradient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/greenTemp"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginTop="164dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/g_temp_info"
            android:src="@drawable/green_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/greenLight"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="82dp"
            android:contentDescription="@string/g_light_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/green_gradient"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/greenWindow"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="81dp"
            android:contentDescription="@string/g_window_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/green_gradient"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/tempInfo"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginTop="164dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/r_temp_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/red_gradient"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/doorInfo"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="164dp"
            android:contentDescription="@string/r_door_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/red_gradient"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/lightInfo"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="82dp"
            android:contentDescription="@string/r_light_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/red_gradient"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/windowInfo"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="81dp"
            android:contentDescription="@string/r_window_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/red_gradient" />

        <ImageView
            android:id="@+id/iv_press_temp"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="168dp"
            android:layout_marginEnd="27dp"
            android:src="@drawable/temp_button_pressed"
            android:contentDescription="@string/temppress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_press_lock"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="168dp"
            android:src="@drawable/lock_button_pressed"
            android:contentDescription="@string/lockpress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_home_icon"
            android:layout_width="57dp"
            android:layout_height="53dp"
            android:layout_marginStart="310dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/homeicon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/iv_press_window"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="83dp"
            android:background="@null"
            android:contentDescription="@string/windowspressed"
            android:scaleType="fitCenter"
            android:src="@drawable/window_button_pressed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <ImageButton
            android:id="@+id/window_Btn"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="83dp"
            android:background="@null"
            android:contentDescription="@string/windows"
            android:scaleType="fitCenter"
            android:src="@drawable/window_custom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/iv_press_light"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="27dp"
            android:layout_marginBottom="83dp"
            android:contentDescription="@string/lightpressed"
            android:src="@drawable/light_button_pressed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/light_Btn"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="27dp"
            android:layout_marginBottom="83dp"
            android:background="@null"
            android:contentDescription="@string/lightbtn"
            android:scaleType="fitCenter"
            android:src="@drawable/light_custom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/temp_Btn"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="168dp"
            android:layout_marginEnd="27dp"
            android:background="@null"
            android:contentDescription="@string/tempbtn"
            android:scaleType="fitCenter"
            android:src="@drawable/temp_custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/lock_Btn"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="168dp"
            android:background="@null"
            android:contentDescription="@string/lockbtn"
            android:scaleType="fitCenter"
            android:src="@drawable/lock_custom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="96dp"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/sw_lock"
            android:layout_width="114dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="312dp"
            android:text="@string/off_on"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml,DuplicateSpeakableTextCheck" />

        <Switch
            android:id="@+id/sw_temp"
            android:layout_width="114dp"
            android:layout_height="48dp"
            android:layout_marginTop="312dp"
            android:layout_marginEnd="35dp"
            android:text="@string/off_on"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/sw_light"
            android:layout_width="114dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="24dp"
            android:text="@string/off_on"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/sw_window"
            android:layout_width="114dp"
            android:layout_height="48dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="24dp"
            android:text="@string/off_on"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/tv_quick_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="21dp"
            android:text="@string/quick_access"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>